# almost_sure_least_squares

./: .gitignore  .gitmodules  Z_integral_plot.py  activate  als.py  als_v2.py  als_v3.py  basis_1d.py  deactivate  dpp_hermite.ipynb  dpp_legendre.ipynb  environment.yml  greedy_subsampling.py  horribasis.py  least_squares.py  plot_mu_phase_diagram.py  pyproject.toml  rkhs_1d.py  rkhs_2d.py  rkhs_nd.py  sampling.py  sampling_data.py  sampling_data_parallel.py  setup  tensor_train.py
deprecated/: sampling.py
tests/: test_rkhs_1d.py
